# bcgeDataPy

./: README.md  pyproject.toml
src/bcgeDataPy/: SEPy.py  ZenodoObj.py  __init__.py  helpers.py
