[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bcgeDataPy"
dynamic = ["version"]
dependencies = [
    "pandas>=2.0"
]
requires-python = ">= 3.1"
authors = [
    {name = "Heidi Steadman", email = "hstead05@byu.edu"},
    {name = "Shu-Fei Lo", email = "shufeilo@byu.edu"},
    {name = "Stephen Piccolo", email = "stephen_piccolo@byu.edu"}
]
maintainers = [
    {name = "Stephen Piccolo", email = "stephen_piccolo@byu.edu"}
]
description = "Python version of AnnotatedBCGEData R package with access to 100+ annotated BRCA gene expression datasets."
readme = "README.md"
keywords = ["gene expression", "data", "breast cancer", "pandas", "Bioconductor", "Summarized Experiment"]

[project.urls]
Repository = "https://github.com/heidisteadman/bcgeDataPy"
Issues = "https://github.com/heidisteadman/bcgeDataPy/issues"